--- a/genindex.html
+++ b/genindex.html
@@ -725,9 +725,11 @@
         <li><a href="versioneer.html#versioneer.plus_or_dot">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.post_create">post_create() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.post_create">post_create() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.post_create">(copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.post_create">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       </ul></li>
@@ -881,22 +883,6 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
-      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.run">run() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
-
-      <ul>
-        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.run">(copyxnat.commands.copy_command.CopyCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.run">(copyxnat.commands.export_command.ExportCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.run">(copyxnat.commands.ohif_command.OhifCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.run">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.run">(copyxnat.commands.show_command.ShowCommand method)</a>
-</li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">(copyxnat.xnat.commands.Command method)</a>
-</li>
-      </ul></li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.run_command">run_command() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -907,6 +893,28 @@
       </ul></li>
       <li><a href="copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.xnat.run_command)</a>
 </li>
+      <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.run_post">run_post() (copyxnat.commands.copy_command.CopyCommand method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_post">(copyxnat.xnat.commands.Command method)</a>
+</li>
+      </ul></li>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.run_pre">run_pre() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
+
+      <ul>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.run_pre">(copyxnat.commands.copy_command.CopyCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.run_pre">(copyxnat.commands.export_command.ExportCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.run_pre">(copyxnat.commands.ohif_command.OhifCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.run_pre">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.run_pre">(copyxnat.commands.show_command.ShowCommand method)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_pre">(copyxnat.xnat.commands.Command method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.run_recursive">run_recursive() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
   </ul></td>
