--- a/_modules/copyxnat/xnat/commands.html
+++ b/_modules/copyxnat/xnat/commands.html
@@ -41,7 +41,6 @@
 <span></span><span class="c1"># coding=utf-8</span>
 
 <span class="sd">&quot;&quot;&quot;Commands defining actions that can be performed with copyxnat&quot;&quot;&quot;</span>
-<span class="kn">import</span> <span class="nn">abc</span>
 
 
 <div class="viewcode-block" id="Command"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">[docs]</a><span class="k">class</span> <span class="nc">Command</span><span class="p">:</span>
@@ -53,9 +52,26 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">outputs</span> <span class="o">=</span> <span class="kc">None</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">ignore_filter</span> <span class="o">=</span> <span class="p">[]</span>
 
-<div class="viewcode-block" id="Command.run"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">[docs]</a>    <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
-    <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Function that will be run on each item in the XNAT server&quot;&quot;&quot;</span></div>
+<div class="viewcode-block" id="Command.run_pre"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_pre">[docs]</a>    <span class="k">def</span> <span class="nf">run_pre</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Function that will be run on each item in the XNAT server before</span>
+<span class="sd">        being run on its children</span>
+
+<span class="sd">        :xnat_item: The source server XnatItem to process</span>
+<span class="sd">        :from_parent: The value returned by this function when it was run on</span>
+<span class="sd">        this xnat_item&#39;s parent</span>
+<span class="sd">        &quot;&quot;&quot;</span></div>
+
+<div class="viewcode-block" id="Command.run_post"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_post">[docs]</a>    <span class="k">def</span> <span class="nf">run_post</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="p">,</span> <span class="n">from_pre</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Function that will be run on each item in the XNAT server after being</span>
+<span class="sd">        run on its children</span>
+<span class="sd">        :xnat_item: The source server XnatItem to process</span>
+<span class="sd">        :from_parent: The value returned by this function when it was run on</span>
+<span class="sd">        this xnat_item&#39;s parent</span>
+<span class="sd">        from_pre: The value returned by the run_pre command when it was run</span>
+<span class="sd">        on this xnat_item</span>
+<span class="sd">        &quot;&quot;&quot;</span></div>
 
 <div class="viewcode-block" id="Command.print_results"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.print_results">[docs]</a>    <span class="k">def</span> <span class="nf">print_results</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Output results to user&quot;&quot;&quot;</span>
