--- a/genindex.html
+++ b/genindex.html
@@ -725,11 +725,9 @@
         <li><a href="versioneer.html#versioneer.plus_or_dot">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.post_create">post_create() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.post_create">post_create() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.post_create">(copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
-</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.post_create">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       </ul></li>
